_campus_styles_alt.css
/* ... */
.imageContainer img {height:auto; max-width:100%;}
.prodZoom {width:560px; height:650px; position:absolute; top:0; left:325px; z-index:1; background:#ffffff; border:1px solid #000; box-shadow:0 0 4px 2px #000000;}
.logoUpSell {line-height:50px;}
.productPageLink {padding:6px 0 0 0; color:#781c2b;}
.prodSummaryContainer {width:300px; margin:10px auto; text-align:center;}
.productPage .basePrice {color:#194835; font-size:3em;}
.priceContainer {position:relative;}
.prodMSRP {color:#cccccc; color: #ccc; display: inline-block; font-size: 2.0em; margin: 10px 0 0 10px; text-align: center;}
.basePrice {display:inline-block;}
.moneyBefore {height:26px; width:22px; background-position:-403px -116px; position:absolute; top:10px; left:30%; margin:0 0 0 -15%; display:inline-block;}
.moneyAfter {height:26px; width:22px; background-position:-431px -116px; position:absolute; top:10px; right:30%; margin:0 -15% 0 0; display:inline-block;}
.savingsPercentage {display: inline-block; color:#781c2b; font-size: 2em; margin: 10px 20px 0 0; text-align: center;}
.productPage .priceDesc {font-size:0.5em; display:block; color:#000000; font-weight:normal;}
.variation_SZ .label_select {display:none;}
.sizeOption, .qtySelect {color:#ffffff; background-color:#781c2b; padding:10px; text-align:center; font-weight:bold; margin:5px;}
.sizeOption.selectedSize {color:#781c2b; background-color:#ffffff; border:1px solid #781c2b; margin:4px;}
.prodViewerAddToCartForm {margin:0}
.prodViewerAddToCartForm .inLine {display:inline;}
.prodViewerAddToCartForm .variationsWrapper {padding:0 15px;}
.qtyATCWraper {width:90%; margin:0 auto;}
.selectWrapper {width:61px; position:relative; overflow:hidden;}
.selectWrapper .sprite {height:40px; width:20px; position:absolute; top:10px; right:5px; background-position:0 0;}
.qtySelect {height:35px; min-width:84px; margin:10px 5px; padding:6px 2px; color:#781c2b; display:inline-block; background:url("images/sprite_500x500.png") no-repeat scroll 25px -463px #ffffff; border:1px solid #781c2b; text-align:left;}
.prodViewerAddToCartForm .numberInput {height:40px; border:1px inset #000000; text-align:center;}
.productPage .addtocartbutton {height:50px; width:170px; color:#000000; font-size:2em; border-top:2px outset #fbe143; border-right:2px outset #000000; border-bottom:2px outset #000000; border-left:2px outset #fbe143; box-shadow:2px 2px 0 0 #cccccc; border-radius:0;}
[data-order-soon='1'] {height:0; overflow:hidden;}
.satisfactionGuarantee div[data-slide="toggle"] {display:none; padding:0 1em;}
.latency {width: 290px; margin:10px auto; color:#194835; font-size:1.2em; background-color:#eeeeee; border:2px solid #cccccc; box-shadow:2px 2px 0 0 #cccccc; padding:7px 0;}
.latency .sprite, .satisfactionGuarantee .sprite {height:12px; width:16px; background-position:-351px -117px; display:inline-block;}
.latency.open .sprite, .satisfactionGuarantee.open .sprite {background-position:-351px -131px;}
.latency h3 {display:inline;}
.latency span {font-size:0.6em;}
.latency div[data-slide="toggle"] {display:none; color:#000000; text-align:left;	font-size:0.8em; margin:1em 0; padding:0 1em;}
.fitTip {text-align:left}
.fitTip span {margin:0 0 0 5px; text-decoration:underline;}
.socialLinks a {margin:5px;}

.tabbedProductContentTD .ui-tabs .ui-tabs-nav {width:290px; margin:0 auto; padding:0; box-shadow:2px 2px 0 0 #cccccc;}
/* backgrounds for default and active state set in globals w/ gradients */
.tabbedProductContentTD .ui-tabs .ui-tabs-nav li.ui-state-default, .catSideline .title.ui-state-default {width:100%; border:2px outset #000000; border-radius:0;}
.tabbedProductContentTD .ui-tabs .ui-tabs-nav li.ui-state-active, .catSideline .title.ui-state-active {border-top:2px outset #b75970; border-right:2px outset #000000; border-bottom:2px outset #000000; border-left:2px outset #b75970;}
.tabbedProductContentTD .ui-tabs .ui-tabs-nav li.ui-state-default a {width:100%; color:#ffffff; text-align:center; font-family:Arial, sans-serif; font-weight:bold;}
.tabbedProductContentTD .ui-widget.ui-widget-content.ui-corner-bottom.ui-corner-tr {width:290px; margin:0 auto; background:none; border:none; border-radius:0;}
.tabbedProductContentTD .tabContent.ui-tabs-panel.ui-widget-content.ui-corner-bottom {border:none;}
.sizeGuide {height:auto; max-width:100%;} /*box-shadow:1px 1px 3px 1px #444444;*/

.prodlistRelatedContainer .productList.ccList > li {margin:5px auto 108px auto;}

.productRecentCarousel .mpControlContainer {display:none;}
.ui-dialog.emailDialog {padding:5px; background:#781c2b;}
.ui-dialog.emailDialog, .ui-dialog.emailDialog .ui-dialog-content {color:#ffffff; border-radius:4px;}
.ui-dialog.emailDialog .ui-dialog-content {padding:1% 3% 3% 3%; border:5px solid #ffffff;}
.ui-dialog.emailDialog input {padding:3px 10px;}
.ui-dialog.emailDialog input[type=submit] {font-family:Arial, sans-serif; font-weight:bold;}
.emailDialog input[type=email] {width:65%; margin:0 0 5px 0;}



/*productTemplateQuickiew*/
.productTemplateQuickView .imageContainer, .productTemplateQuickView .prodSummaryContainer  {width:90%;}
.productTemplateQuickView .latency {width:90%; font-size:1em;}
.productTemplateQuickView .ccButton {width:70%; display:block; margin:0 auto; text-align:center;}


/* companyTemplate */
.companyTemplate .mainColumn {width:100%;}
.companyTemplate h1, .customerTemplate h1 {font-family:Arial, sans-serif; font-weight:bold; margin:0 0 1em 0;}
.companyTemplate h2 {color:#781c2b; font-family:Arial, sans-serif; font-weight:bold;}
.companyTemplate h3 {color:#666666;}
.sideline a {color:#666666;}
.sideline a:hover {color:#781c2b;}
.companyTemplate .contactArticle h3, .companyTemplate .contactArticle span, .companyTemplate .contactArticle a {color:#194835; text-decoration:none;}
.companyTemplate .contactArticle a:hover {color:#781c2b;}

.companyAddress {width:100%;}
.companyAddress button {margin:10px;}
.contactArticle form {height:0; overflow:hidden;}
.contactArticle form fieldset {border:none;}

.locationBlock {width:300px;}
/* ... */

